--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
                 <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
                 <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Contact Me</a></li>
+                <li class="nav__item"><a href="#contact" class="nav__link">Contact Me</a></li>
             </ul>
         </nav>
     </header>
@@ -113,13 +113,13 @@
 
     <!-- FOOTER -->
     <footer>
-        <a href="mailto:calvinkim1230@gmail.com" class="footer__link">calvinkim1230@gmail.com</a>
-        <ul class="social-list">
-            <li class="social-list__item"><a class="social-list__link" href="#"></a>a</li>
-            <li class="social-list__item"><a class="social-list__link" href="#"></a>b</li>
-            <li class="social-list__item"><a class="social-list__link" href="#"></a>c</li>
-            <li class="social-list__item"><a class="social-list__link" href="#"></a>d</li> 
-        </ul>
+        <a href="mailto:calvinkim1230@gmail.com" class="footer__link" id="contact">Contact Me!</a>
+        <div class="social-list">
+            <a href="#" class="social-list__link">a</a>
+            <a href="#" class="social-list__link">b</a>
+            <a href="#" class="social-list__link">c</a>
+            <a href="#" class="social-list__link">d</a> 
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
