--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@500&family=Saira+Condensed:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>CK | Full Stack Developer</title>
 </head>
@@ -14,7 +17,7 @@
     <!-- HEADER -->
     <header>
         <div class="logo">
-            <h1>devcalvin</h1>
+            <h1>devCalvin</h1>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -113,12 +116,12 @@
 
     <!-- FOOTER -->
     <footer>
-        <a href="mailto:calvinkim1230@gmail.com" class="footer__link" id="contact">Contact Me!</a>
+        <div class="footer__link" id="contact">Connect with me!</div>
         <div class="social-list">
-            <a href="#" class="social-list__link">a</a>
-            <a href="#" class="social-list__link">b</a>
-            <a href="#" class="social-list__link">c</a>
-            <a href="#" class="social-list__link">d</a> 
+            <a href="https://github.com/calvin-kim13" target="_blank" class="social-list__link" ><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/calvin-kim-143aa51a2/" target="_blank" class="social-list__link"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="mailto:calvinkim1230@gmail.com" target="_blank" class="social-list__link"><i class="fa-solid fa-envelope"></i></a>
+            <a href="https://www.instagram.com/calvin.kimm/" target="_blank" class="social-list__link"><i class="fa-brands fa-instagram"></i></a> 
         </div>
     </footer>
 
