added screenshots of projects and added links to html and minor update to css sizing

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 
         <div class="portfolio">
             <!-- PORTFOLIO ITEM 1 -->
-            <a href="#" class="portfolio__items">
-                <img src="./assets/img/home-img.jpg" alt="" class="portfolio__img">
+            <a href="https://calvin-kim13.github.io/marketTalk/" target="_blank" class="portfolio__items">
+                <img src="./assets/img/marketTalk.png" alt="" class="portfolio__img">
             </a>
             <!-- PORTFOLIO ITEM 2 -->
-            <a href="#" class="portfolio__items">
-                <img src="./assets/img/home-img.jpg" alt="" class="portfolio__img">
+            <a href="https://calvin-kim13.github.io/weatherForecast/" class="portfolio__items">
+                <img src="./assets/img/weather.png" alt="" class="portfolio__img">
             </a>
             <!-- PORTFOLIO ITEM 3 -->
             <a href="#" class="portfolio__items">
