added new images for projects, added readme file, and updated css and html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- HEADER -->
     <header>
         <div class="logo">
-            <h1>devCalvin</h1>
+            <h1>&#60;devcalvin&#62;</h1>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -36,7 +36,7 @@
     <!-- INTRODUCTION -->
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
-            Hi, I am <strong>Calvin Kim</strong>
+            Hi, I'm <strong>Calvin Kim</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">full stack dev</p>
         <img src="./assets/img/home-img.jpg" alt="picture of calvin" class="intro__img">
@@ -47,18 +47,18 @@
         <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3>Design + Development</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, dignissimos saepe neque, id, velit aut incidunt nihil non cumque quibusdam tenetur facilis eum quam atque harum vitae tempora consequuntur aliquam.</p>
+                <h3>Development</h3>
+                <p>I use skills such as JavaScript, CSS, HTML, and other frameworks to develop websites. I create websites with a polished user interface (UI) and create a smooth user experience (UX).</p>
             </div>
             <!-- END OF SERVICE 1 -->
             <div class="service">
-                <h3>E-Commerce</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id expedita dolor ad minima aperiam numquam consequuntur doloremque eum quam quidem! Amet dolorem ex eveniet alias eaque vitae suscipit, hic vel!</p>
+                <h3>Design</h3>
+                <p>I use my knowledge of CSS and other CSS frameworks to create a polished UI. I also utilize adobe XD to create wireframes and to have a clear picture of what I want my webpage to look like.</p>
             </div>
             <!-- END OF SERVICE 2 -->
             <div class="service">
-                <h3>WordPress</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In laudantium natus minima esse possimus architecto aut recusandae quidem doloremque, placeat officiis saepe. Et modi reiciendis, ut cumque provident maiores alias.</p>
+                <h3>Adobe XD</h3>
+                <p>I can also create wireframes and a neat prototype of a website using adobe XD. I can design the UI of a webpage in a modern and stylish way.</p>
             </div>
             <!-- END OF SERVICE 3 -->
         </div>
@@ -74,8 +74,9 @@
         </p>
 
         <div class="about-me__body">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis ad debitis autem libero esse. Repudiandae nobis, dicta cupiditate id aperiam amet recusandae ipsum voluptas nisi tempore, inventore quidem, numquam sequi.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti illum laborum neque necessitatibus eveniet mollitia sunt omnis, accusantium amet suscipit obcaecati voluptate quaerat ipsum illo quidem aut cupiditate. Labore, obcaecati.</p>
+            <p>I am a Full-Stack Web Developer looking for opportunities. The skills I possess are JavaScript, CSS, HTML, jQuery, node.js, bootstrap, and many other frameworks. The main area of my expertise lies within JavaScript, HTML, and CSS.</p>
+            <p>I am a web developing student at the UCI Coding Bootcamp, which focuses on full stack development. I am also a student at the University of La Verne majoring in Business Finance.</p>
+            <p>Some of my outside hobbies and interests include playing sports, especially basketball, watching MMA, and going on hikes.</p>
         </div>
 
         <img src="./assets/img/home-img.jpg" alt="a picture of calvin" class="about-me__img">
@@ -92,28 +93,16 @@
                 <img src="./assets/img/marketTalk.png" alt="" class="portfolio__img">
             </a>
             <!-- PORTFOLIO ITEM 2 -->
-            <a href="https://calvin-kim13.github.io/weatherForecast/" class="portfolio__items">
+            <a href="https://calvin-kim13.github.io/weatherForecast/" target="_blank" class="portfolio__items">
                 <img src="./assets/img/weather.png" alt="" class="portfolio__img">
             </a>
             <!-- PORTFOLIO ITEM 3 -->
-            <a href="#" class="portfolio__items">
-                <img src="./assets/img/home-img.jpg" alt="" class="portfolio__img">
-            </a>
-            <!-- PORTFOLIO ITEM 4 -->
-            <a href="#" class="portfolio__items">
-                <img src="./assets/img/home-img.jpg" alt="" class="portfolio__img">
-            </a>
-            <!-- PORTFOLIO ITEM 5 -->
-            <a href="#" class="portfolio__items">
-                <img src="./assets/img/home-img.jpg" alt="" class="portfolio__img">
-            </a>
-            <!-- PORTFOLIO ITEM 6 -->
-            <a href="#" class="portfolio__items">
-                <img src="./assets/img/home-img.jpg" alt="" class="portfolio__img">
+            <a href="https://calvin-kim13.github.io/dayPlanner/" target="_blank" class="portfolio__items">
+                <img src="./assets/img/planner.png" alt="" class="portfolio__img">
             </a>
         </div>
     </section>
-
+    
     <!-- FOOTER -->
     <footer>
         <div class="footer__link" id="contact">Connect with me!</div>
